--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -8,9 +8,33 @@
 
 <div class="container body-content">
 
-    <!-- // TODO #2 - display the job fields, one per row -->
+    <!-- // TODOs #2 - display the job fields, one per row -->
+    <div th:unless="${jobBYId}">
+        <h2>No Results</h2>
+    </div>
+    <table class="job-by-id">
+        <tr>
+            <th>Name</th>
+            <td th:text="${jobBYId.name}"></td>
+        </tr>
+        <tr>
+            <th>Employer</th>
+            <td th:text="${jobBYId.employer}"></td>
+        </tr>
+        <tr>
+            <th>Location</th>
+            <td th:text="${jobBYId.location}"></td>
+        </tr>
+        <tr>
+            <th>Position Type</th>
+            <td th:text="${jobBYId.positionType}"></td>
+        </tr>
+        <tr>
+            <th>Skill</th>
+            <td th:text="${jobBYId.coreCompetency}"></td>
+        </tr>
+    </table>
 
 </div>
-
 </body>
 </html>
